[UPDATE] - Adicionado o estilo inicial básico, com todas as imgens

--- a/index.html
+++ b/index.html
@@ -1,114 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Title</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/estilo.css">
 </head>
 <body>
-<div class="quadro-de-letras">
-    <div class="letra">A</div>
-    <div class="letra">E</div>
-    <div class="letra">I</div>
-    <div class="letra">O</div>
-    <div class="letra">U</div>
+
+<div class="container">
+    <div class="row quadro-de-letras">
+        <div class="col-md-2 letra centralizado"><span>A</span></div>
+        <div class="col-md-2 letra centralizado"><span>E</span></div>
+        <div class="col-md-2 letra centralizado"><span>I</span></div>
+        <div class="col-md-2 letra centralizado"><span>O</span></div>
+        <div class="col-md-2 letra centralizado"><span>U</span></div>
+    </div>
 </div>
-<div class="container-imagens">
+<div class="container container-imagens">
     <div class="row" id="vogal-a">
-        <div>
-            <img src="" alt="">
+        <div class="col-md-2 centralizado col-md-offset-2">
+            <div class="imagem-palavra aviao"></div>
             <div class="palavra" id="palavraA0">
 
             </div>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="col-md-2 centralizado">
+           <div class="imagem-palavra abelha"></div>
             <div class="palavra" id="palavraA1">
 
             </div>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="col-md-2 centralizado">
+           <div class="imagem-palavra anel"></div>
             <div class="palavra" id="palavraA2">
 
             </div>
         </div>
     </div>
     <div class="row" id="vogal-e">
-        <div>
-            <img src="" alt="">
+        <div class="col-md-2 centralizado col-md-offset-2">
+           <div class="imagem-palavra estrela"></div>
             <div class="palavra" id="palavraE0">
 
             </div>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="col-md-2 centralizado">
+           <div class="imagem-palavra elefante"></div>
             <div class="palavra" id="palavraE1">
 
             </div>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="col-md-2 centralizado">
+           <div class="imagem-palavra escova"></div>
             <div class="palavra" id="palavraE2">
 
             </div>
         </div>
     </div>
     <div class="row" id="vogal-i">
-        <div>
-            <img src="" alt="">
+        <div class="col-md-2 centralizado col-md-offset-2">
+           <div class="imagem-palavra ilha"></div>
             <div class="palavra" id="palavraI0">
 
             </div>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="col-md-2 centralizado ">
+           <div class="imagem-palavra igreja"></div>
             <div class="palavra" id="palavraI1">
 
             </div>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="col-md-2 centralizado">
+           <div class="imagem-palavra ioio"></div>
             <div class="palavra" id="palavraI2">
 
             </div>
         </div>
     </div>
     <div class="row" id="vogal-o">
-        <div>
-            <img src="" alt="">
+        <div class="col-md-2 centralizado col-md-offset-2">
+           <div class="imagem-palavra onca"></div>
             <div class="palavra" id="palavraO0">
 
             </div>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="col-md-2 centralizado">
+           <div class="imagem-palavra onibus"></div>
             <div class="palavra" id="palavraO1">
 
             </div>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="col-md-2 centralizado">
+           <div class="imagem-palavra ovo"></div>
             <div class="palavra" id="palavraO2">
 
             </div>
         </div>
     </div>
     <div class="row" id="vogal-u">
-        <div>
-            <img src="" alt="">
+        <div class="col-md-2 centralizado col-md-offset-2">
+           <div class="imagem-palavra uva"></div>
             <div class="palavra" id="palavraU0">
 
             </div>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="col-md-2 centralizado">
+           <div class="imagem-palavra urso"></div>
             <div class="palavra" id="palavraU1">
 
             </div>
         </div>
-        <div>
-            <img src="" alt="">
+        <div class="col-md-2 centralizado">
+           <div class="imagem-palavra unicornio"></div>
             <div class="palavra" id="palavraU2">
 
             </div>
@@ -118,5 +123,6 @@
 
 </body>
 <script src="assets/jquery-3.4.1.min.js" ></script>
+<script src="assets/bootstrap/js/bootstrap.min.js"></script>
 <script src="assets/main.js" ></script>
 </html>
