--- a/index.html
+++ b/index.html
@@ -11,108 +11,108 @@
 
 <div class="container">
     <div class="row quadro-de-letras">
-        <div class="col-md-2 letra centralizado"><span>A</span></div>
-        <div class="col-md-2 letra centralizado"><span>E</span></div>
-        <div class="col-md-2 letra centralizado"><span>I</span></div>
-        <div class="col-md-2 letra centralizado"><span>O</span></div>
-        <div class="col-md-2 letra centralizado"><span>U</span></div>
+        <div data-exibir="vogal-a" id="vogal-principal-a" class="col-md-2 letra-ativa letra centralizado link container-letra"><span>A</span></div>
+        <div data-exibir="vogal-e" id="vogal-principal-e" class="col-md-2 letra centralizado link container-letra"><span>E</span></div>
+        <div data-exibir="vogal-i" id="vogal-principal-i" class="col-md-2 letra centralizado link container-letra"><span>I</span></div>
+        <div data-exibir="vogal-o" id="vogal-principal-o" class="col-md-2 letra centralizado link container-letra"><span>O</span></div>
+        <div data-exibir="vogal-u" id="vogal-principal-u" class="col-md-2 letra centralizado link container-letra"><span>U</span></div>
     </div>
 </div>
-<div class="container container-imagens">
-    <div class="row" id="vogal-a">
-        <div class="col-md-2 centralizado col-md-offset-2">
+<div class="container container-imagens margin-top-100">
+    <div class="row container-da-vogal" id="vogal-a">
+        <div class="col-md-2 centralizado col-md-offset-2 container-imagem">
             <div class="imagem-palavra aviao"></div>
             <div class="palavra" id="palavraA0">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado">
+        <div class="col-md-2 centralizado container-imagem">
            <div class="imagem-palavra abelha"></div>
             <div class="palavra" id="palavraA1">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado">
+        <div class="col-md-2 centralizado container-imagem">
            <div class="imagem-palavra anel"></div>
             <div class="palavra" id="palavraA2">
 
             </div>
         </div>
     </div>
-    <div class="row" id="vogal-e">
-        <div class="col-md-2 centralizado col-md-offset-2">
+    <div style="display: none;" class="row container-da-vogal" id="vogal-e">
+        <div class="col-md-2 centralizado container-imagem col-md-offset-2">
            <div class="imagem-palavra estrela"></div>
             <div class="palavra" id="palavraE0">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado">
+        <div class="col-md-2 centralizado container-imagem">
            <div class="imagem-palavra elefante"></div>
             <div class="palavra" id="palavraE1">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado">
+        <div class="col-md-2 centralizado container-imagem">
            <div class="imagem-palavra escova"></div>
             <div class="palavra" id="palavraE2">
 
             </div>
         </div>
     </div>
-    <div class="row" id="vogal-i">
-        <div class="col-md-2 centralizado col-md-offset-2">
+    <div style="display: none;" class="row container-da-vogal" id="vogal-i">
+        <div class="col-md-2 centralizado container-imagem col-md-offset-2">
            <div class="imagem-palavra ilha"></div>
             <div class="palavra" id="palavraI0">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado ">
+        <div class="col-md-2 centralizado container-imagem ">
            <div class="imagem-palavra igreja"></div>
             <div class="palavra" id="palavraI1">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado">
+        <div class="col-md-2 centralizado container-imagem">
            <div class="imagem-palavra ioio"></div>
             <div class="palavra" id="palavraI2">
 
             </div>
         </div>
     </div>
-    <div class="row" id="vogal-o">
-        <div class="col-md-2 centralizado col-md-offset-2">
+    <div style="display: none;" class="row container-da-vogal" id="vogal-o">
+        <div class="col-md-2 centralizado container-imagem col-md-offset-2">
            <div class="imagem-palavra onca"></div>
             <div class="palavra" id="palavraO0">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado">
+        <div class="col-md-2 centralizado container-imagem">
            <div class="imagem-palavra onibus"></div>
             <div class="palavra" id="palavraO1">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado">
+        <div class="col-md-2 centralizado container-imagem">
            <div class="imagem-palavra ovo"></div>
             <div class="palavra" id="palavraO2">
 
             </div>
         </div>
     </div>
-    <div class="row" id="vogal-u">
-        <div class="col-md-2 centralizado col-md-offset-2">
+    <div style="display: none;" class="row container-da-vogal" id="vogal-u">
+        <div class="col-md-2 centralizado container-imagem col-md-offset-2">
            <div class="imagem-palavra uva"></div>
             <div class="palavra" id="palavraU0">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado">
+        <div class="col-md-2 centralizado container-imagem">
            <div class="imagem-palavra urso"></div>
             <div class="palavra" id="palavraU1">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado">
+        <div class="col-md-2 centralizado container-imagem">
            <div class="imagem-palavra unicornio"></div>
             <div class="palavra" id="palavraU2">
 
