[UPDATE] - Finalizada a versão final do sistema

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Title</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/estilo.css">
@@ -11,7 +11,7 @@
 
 <div class="container">
     <div class="row quadro-de-letras">
-        <div data-exibir="vogal-a" id="vogal-principal-a" class="col-md-2 letra-ativa letra centralizado link container-letra"><span>A</span></div>
+        <div data-exibir="vogal-a" id="vogal-principal-a" class="col-md-2 col-md-offset-1 letra-ativa letra centralizado link container-letra"><span>A</span></div>
         <div data-exibir="vogal-e" id="vogal-principal-e" class="col-md-2 letra centralizado link container-letra"><span>E</span></div>
         <div data-exibir="vogal-i" id="vogal-principal-i" class="col-md-2 letra centralizado link container-letra"><span>I</span></div>
         <div data-exibir="vogal-o" id="vogal-principal-o" class="col-md-2 letra centralizado link container-letra"><span>O</span></div>
@@ -20,19 +20,19 @@
 </div>
 <div class="container container-imagens margin-top-100">
     <div class="row container-da-vogal" id="vogal-a">
-        <div class="col-md-2 centralizado col-md-offset-2 container-imagem">
+        <div class="col-md-4 centralizado container-imagem">
             <div class="imagem-palavra aviao"></div>
             <div class="palavra" id="palavraA0">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado container-imagem">
+        <div class="col-md-4 centralizado container-imagem">
            <div class="imagem-palavra abelha"></div>
             <div class="palavra" id="palavraA1">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado container-imagem">
+        <div class="col-md-4 centralizado container-imagem">
            <div class="imagem-palavra anel"></div>
             <div class="palavra" id="palavraA2">
 
@@ -40,19 +40,19 @@
         </div>
     </div>
     <div style="display: none;" class="row container-da-vogal" id="vogal-e">
-        <div class="col-md-2 centralizado container-imagem col-md-offset-2">
+        <div class="col-md-4 centralizado container-imagem">
            <div class="imagem-palavra estrela"></div>
             <div class="palavra" id="palavraE0">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado container-imagem">
+        <div class="col-md-4 centralizado container-imagem">
            <div class="imagem-palavra elefante"></div>
             <div class="palavra" id="palavraE1">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado container-imagem">
+        <div class="col-md-4 centralizado container-imagem">
            <div class="imagem-palavra escova"></div>
             <div class="palavra" id="palavraE2">
 
@@ -60,19 +60,19 @@
         </div>
     </div>
     <div style="display: none;" class="row container-da-vogal" id="vogal-i">
-        <div class="col-md-2 centralizado container-imagem col-md-offset-2">
+        <div class="col-md-4 centralizado container-imagem">
            <div class="imagem-palavra ilha"></div>
             <div class="palavra" id="palavraI0">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado container-imagem ">
+        <div class="col-md-4 centralizado container-imagem">
            <div class="imagem-palavra igreja"></div>
             <div class="palavra" id="palavraI1">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado container-imagem">
+        <div class="col-md-4 centralizado container-imagem">
            <div class="imagem-palavra ioio"></div>
             <div class="palavra" id="palavraI2">
 
@@ -80,19 +80,19 @@
         </div>
     </div>
     <div style="display: none;" class="row container-da-vogal" id="vogal-o">
-        <div class="col-md-2 centralizado container-imagem col-md-offset-2">
+        <div class="col-md-4 centralizado container-imagem">
            <div class="imagem-palavra onca"></div>
             <div class="palavra" id="palavraO0">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado container-imagem">
+        <div class="col-md-4 centralizado container-imagem">
            <div class="imagem-palavra onibus"></div>
             <div class="palavra" id="palavraO1">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado container-imagem">
+        <div class="col-md-4 centralizado container-imagem">
            <div class="imagem-palavra ovo"></div>
             <div class="palavra" id="palavraO2">
 
@@ -100,19 +100,19 @@
         </div>
     </div>
     <div style="display: none;" class="row container-da-vogal" id="vogal-u">
-        <div class="col-md-2 centralizado container-imagem col-md-offset-2">
+        <div class="col-md-4 centralizado container-imagem">
            <div class="imagem-palavra uva"></div>
             <div class="palavra" id="palavraU0">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado container-imagem">
+        <div class="col-md-4 centralizado container-imagem">
            <div class="imagem-palavra urso"></div>
             <div class="palavra" id="palavraU1">
 
             </div>
         </div>
-        <div class="col-md-2 centralizado container-imagem">
+        <div class="col-md-4 centralizado container-imagem">
            <div class="imagem-palavra unicornio"></div>
             <div class="palavra" id="palavraU2">
 
