[UPDATE] - Finalizadas as melhorias

--- a/index.html
+++ b/index.html
@@ -143,5 +143,6 @@
 </body>
 <script src="assets/jquery-3.4.1.min.js" ></script>
 <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="assets/switch-alert/sweetalert2.all.min.js"></script>
 <script src="assets/main.js" ></script>
 </html>
